--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     {% endif %}
     <ul class="main-navigation">
       <li><a href="/">Blog</a></li>
-      <li><a href="/blog/archives">Archives</a></li>
+      <li><a href="/blog/archives/">Archives</a></li>
     </ul>
     </nav>
     <div id="main">
