Fixed disqus comments.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,6 @@
     Copyright &copy; 2012 - Kenan Shifflett -
     <span class="credit">Built using <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>. Theme from <a href="http://octopress.org" target="_blank">Octopress</a>. Edited with <a href="http://prose.io/" target="_blank">Prose.io</a>. Hosted by <a href="http://github.com/" target="_blank">Github</a>.</span>
     </footer>
+    {% include disqus.html %}
   </body>
 </html>
