--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta property="fb:admins" content="704712040" />
     <link rel='icon' href='{{site.baseurl}}/images/favicon.png'>
     <link rel='stylesheet' href='{{site.baseurl}}/screen.css'>
     <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
